Project padding and coloring finalized

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Your Name - Portfolio</title>
+    <title>Shea McAuley - Portfolio</title>
 </head>
 <body>
     <header>
-        <h1>Your Name</h1>
+        <h1>Shea McAuley</h1>
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
@@ -20,22 +20,55 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>Your brief introduction goes here.</p>
+        <p>As a Software Engineer II at Hashbang, Inc., I work on developing 
+            and maintaining innovative 
+            and engaging video games for various platforms and genres. 
+            With my passion for game creation and my skills in Unity, C#, 
+            and game programming, I contribute to the design, development, 
+            and testing of game features and systems, ensuring high-quality and 
+            user-friendly gameplay experiences.
+
+            I am working towards a BS in Game Programming & Development from 
+            Southern New Hampshire University, where I learned the fundamentals 
+            and best practices of software engineering, computer graphics, artificial 
+            intelligence, and game design. 
+            I also have an Advanced Diploma in Video Game Programming from the 
+            Academy of Interactive Entertainment, 
+            where I gained hands-on experience in working on game projects with 
+            industry-standard tools and frameworks. 
+            I enjoy learning new technologies and techniques to improve my game 
+            development skills and stay updated with the latest trends and 
+            innovations in the gaming industry.</p>
     </section>
 
     <section id="portfolio">
-        <h2>Portfolio</h2>
+        <h2 class="portfolio-title">Portfolio
         <div class="project">
-            <img src="images/project1.jpg" alt="Project 1">
-            <h3>Project 1</h3>
-            <p>Description of Project 1.</p>
+            <a href="https://elephant-tub-games.itch.io/thumb-maze">
+            <img src="images/alIqBy.jpg" alt="Project 1">
+            <h3>Thumb Maze</h3></a>
+            <p>Have you ever wanted to be chased by a giant man made of thumbs? </p>
+        </div>
+        <div class="project">
+            <a href="https://cafe-interstellar.itch.io/cosmechanics">
+            <img src="images/cosmechanicsIcon.png" alt="Project 2">
+            <h3>Cosmechanics</h3></a>
+            <p>Description of Project 2.</p>
+        </div>
+        <div class="project">
+            <a href="https://cafe-interstellar.itch.io/cosmechanics">
+            <img src="images/TheOfficeSomehowWeManageIcon.png" alt="Project 2">
+            <h3>The Office: Somehow We Manage</h3></a>
+            <p>Description of Project 2.</p>
         </div>
         <!-- Add more project sections as needed -->
     </section>
 
     <section id="contact">
         <h2>Contact</h2>
-        <p>Contact information goes here.</p>
+        <p>Email: Shea.McAuley995@gmail.com</p>
+        <p>Phone: (509) 438-7570
+        <p>Github: sheamcauley/SheaMcAuley995</p>
     </section>
 </body>
 </html>
