--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Shea McAuley - Portfolio</title>
+
+    <!-- Add GitHub and LinkedIn icons with links here -->
+    <div class="social-icons">
+        <a href="https://github.com/SheaMcAuley995" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/sheamcauley/" target="_blank"><i class="fab fa-linkedin"></i></a>
 </head>
 <body>
     <header>
@@ -66,7 +73,8 @@
 
     <section id="contact">
         <h2>Contact</h2>
-        <p>Email: Shea.McAuley995@gmail.com</p>
+        <a href="mailto:Shea.McAuley995@gmail.com">
+        <p>Email: Shea.McAuley995@gmail.com</p></a>
         <p>Phone: (509) 438-7570
         <p>Github: sheamcauley/SheaMcAuley995</p>
     </section>
