--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
         <a href="https://github.com/SheaMcAuley995" target="_blank"><i class="fab fa-github"></i></a>
         <a href="https://www.linkedin.com/in/sheamcauley/" target="_blank"><i class="fab fa-linkedin"></i></a>
 </head>
+<div id="page">
 <body>
     <header>
         <h1>Shea McAuley</h1>
+        <h2>Game Developer | Software Engineer</h2>
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
@@ -51,19 +53,18 @@
 
     <section id="portfolio">
         <h2 class="portfolio-title">Portfolio</h2>
-
         <div class="project-grid">
             <div class="project">
                 <a href="https://play.google.com/store/apps/details?id=com.eastsidegames.theofficeswm&hl=en_US&gl=US">
                 <img src="images/TheOfficeBanner.png" alt="Project 1">
                 <h3>The Office: Somehow We</h3></a>
-                <p>Description of Project 2.</p>
+                <p>Play through hilarious moments from the critically-acclaimed Emmy® award winning comedy</p>
             </div>
             <div class="project">
                 <a href="https://cafe-interstellar.itch.io/cosmechanics">
                 <img src="images/CosmechanicsBanner.png" alt="Project 2">
                 <h3>Cosmechanics</h3></a>
-                <p>Description of Project 2.</p>
+                <p>A frantic, local multiplayer game in which 1 - 4 players must work together to repair and maintain spaceships by rapidly completing increasingly urgent tasks.</p>
             </div>
             <div class="project">
                 <a href="https://elephant-tub-games.itch.io/thumb-maze">
@@ -72,7 +73,6 @@
                 <p>Have you ever wanted to be chased by a giant man made of thumbs? </p>
             </div>
         </div>
-        
     </section>
     
 
@@ -84,6 +84,8 @@
         <p>Github: sheamcauley/SheaMcAuley995</p>
     </section>
 </body>
+</div>
+
 </html>
 
 <script>
