Fixed issue with social icons

--- a/index.html
+++ b/index.html
@@ -1,114 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Shea McAuley - Portfolio</title>
-
-    <!-- Add GitHub and LinkedIn icons with links here -->
-    <div class="social-icons">
-        <a href="https://github.com/SheaMcAuley995" target="_blank"><i class="fab fa-github"></i></a>
-        <a href="https://www.linkedin.com/in/sheamcauley/" target="_blank"><i class="fab fa-linkedin"></i></a>
 </head>
-<div id="page">
 <body>
-    <header>
-        <h1>Shea McAuley</h1>
-        <h2>Game Developer | Software Engineer</h2>
-        <nav>
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <section id="about">
-        <h2>About Me</h2>
-        <img src="images/Shea_Mcauley_ProfilePicture.png" alt="Project 1">
-        <p>As a Software Engineer II at Hashbang, Inc., I work on developing 
-            and maintaining innovative 
-            and engaging video games for various platforms and genres. 
-            With my passion for game creation and my skills in Unity, C#, 
-            and game programming, I contribute to the design, development, 
-            and testing of game features and systems, ensuring high-quality and 
-            user-friendly gameplay experiences.
-
-            I am working towards a BS in Game Programming & Development from 
-            Southern New Hampshire University, where I learned the fundamentals 
-            and best practices of software engineering, computer graphics, artificial 
-            intelligence, and game design. 
-            I also have an Advanced Diploma in Video Game Programming from the 
-            Academy of Interactive Entertainment, 
-            where I gained hands-on experience in working on game projects with 
-            industry-standard tools and frameworks. 
-            I enjoy learning new technologies and techniques to improve my game 
-            development skills and stay updated with the latest trends and 
-            innovations in the gaming industry.</p>
-    </section>
-
-    <section id="portfolio">
-        <h2 class="portfolio-title">Portfolio</h2>
-        <div class="project-grid">
-            <div class="project">
-                <a href="https://play.google.com/store/apps/details?id=com.eastsidegames.theofficeswm&hl=en_US&gl=US">
-                <img src="images/TheOfficeBanner.png" alt="Project 1">
-                <h3>The Office: Somehow We</h3></a>
-                <p>Play through hilarious moments from the critically-acclaimed Emmy® award winning comedy</p>
+    <div id="page">
+        <header>
+            <h1>Shea McAuley</h1>
+            <h2>Game Developer | Software Engineer</h2>
+            <nav>
+                <ul>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+            <!-- Add GitHub and LinkedIn icons with links here -->
+            <div class="social-icons">
+                <a href="https://github.com/SheaMcAuley995" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/sheamcauley/" target="_blank"><i class="fab fa-linkedin"></i></a>
             </div>
-            <div class="project">
-                <a href="https://cafe-interstellar.itch.io/cosmechanics">
-                <img src="images/CosmechanicsBanner.png" alt="Project 2">
-                <h3>Cosmechanics</h3></a>
-                <p>A frantic, local multiplayer game in which 1 - 4 players must work together to repair and maintain spaceships by rapidly completing increasingly urgent tasks.</p>
-            </div>
-            <div class="project">
-                <a href="https://elephant-tub-games.itch.io/thumb-maze">
-                <img src="images/ThumbThumbBanner.png" alt="Project 3">
-                <h3>Thumb Maze</h3></a>
-                <p>Have you ever wanted to be chased by a giant man made of thumbs? </p>
-            </div>
-        </div>
-    </section>
-    
+        </header>
 
-    <section id="contact">
-        <h2>Contact</h2>
-        <a href="mailto:Shea.McAuley995@gmail.com">
-        <p>Email: Shea.McAuley995@gmail.com</p></a>
-        <p>Phone: (509) 438-7570
-        <p>Github: sheamcauley/SheaMcAuley995</p>
-    </section>
+        <section id="about">
+            <h2>About Me</h2>
+            <img src="images/Shea_Mcauley_ProfilePicture.png" alt="Shea McAuley">
+            <p>As a Software Engineer II at Hashbang, Inc., I work on developing and maintaining innovative and engaging video games for various platforms and genres. With my passion for game creation and my skills in Unity, C#, and game programming, I contribute to the design, development, and testing of game features and systems, ensuring high-quality and user-friendly gameplay experiences.</p>
+
+            <p>I am working towards a BS in Game Programming & Development from Southern New Hampshire University, where I learned the fundamentals and best practices of software engineering, computer graphics, artificial intelligence, and game design. I also have an Advanced Diploma in Video Game Programming from the Academy of Interactive Entertainment, where I gained hands-on experience in working on game projects with industry-standard tools and frameworks. I enjoy learning new technologies and techniques to improve my game development skills and stay updated with the latest trends and innovations in the gaming industry.</p>
+        </section>
+
+        <section id="portfolio">
+            <h2 class="portfolio-title">Portfolio</h2>
+            <div class="project-grid">
+                <div class="project">
+                    <a href="https://play.google.com/store/apps/details?id=com.eastsidegames.theofficeswm&hl=en_US&gl=US">
+                        <img src="images/TheOfficeBanner.png" alt="The Office: Somehow We">
+                        <h3>The Office: Somehow We</h3>
+                    </a>
+                    <p>Play through hilarious moments from the critically-acclaimed Emmy® award-winning comedy</p>
+                </div>
+                <div class="project">
+                    <a href="https://cafe-interstellar.itch.io/cosmechanics">
+                        <img src="images/CosmechanicsBanner.png" alt="Cosmechanics">
+                        <h3>Cosmechanics</h3>
+                    </a>
+                    <p>A frantic, local multiplayer game in which 1 - 4 players must work together to repair and maintain spaceships by rapidly completing increasingly urgent tasks.</p>
+                </div>
+                <div class="project">
+                    <a href="https://elephant-tub-games.itch.io/thumb-maze">
+                        <img src="images/ThumbThumbBanner.png" alt="Thumb Maze">
+                        <h3>Thumb Maze</h3>
+                    </a>
+                    <p>Have you ever wanted to be chased by a giant man made of thumbs?</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="contact">
+            <h2>Contact</h2>
+            <a href="mailto:Shea.McAuley995@gmail.com">Email: Shea.McAuley995@gmail.com</a>
+            <p>Phone: (509) 438-7570</p>
+            <p>Github: sheamcauley/SheaMcAuley995</p>
+        </section>
+    </div>
+
+    <script>
+        // Function to check if an element is in the viewport
+        function isInViewport(element) {
+            const rect = element.getBoundingClientRect();
+            return (
+                rect.top >= 0 &&
+                rect.bottom <= (window.innerHeight || document.documentElement.clientHeight)
+            );
+        }
+
+        // Function to handle the scroll event
+        function handleScroll() {
+            const projectSections = document.querySelectorAll('.project.hidden');
+            projectSections.forEach((section) => {
+                if (isInViewport(section)) {
+                    section.classList.remove('hidden');
+                    section.classList.add('animated'); // Optional: Add a class to prevent repeated animations
+                }
+            });
+        }
+
+        // Add a scroll event listener to trigger the animation
+        window.addEventListener('scroll', handleScroll);
+    </script>
 </body>
-</div>
-
 </html>
-
-<script>
-    // Function to check if an element is in the viewport
-    function isInViewport(element) {
-        const rect = element.getBoundingClientRect();
-        return (
-            rect.top >= 0 &&
-            rect.bottom <= (window.innerHeight || document.documentElement.clientHeight)
-        );
-    }
-
-    // Function to handle the scroll event
-    function handleScroll() {
-        const projectSections = document.querySelectorAll('.project.hidden');
-        projectSections.forEach((section) => {
-            if (isInViewport(section)) {
-                section.classList.remove('hidden');
-                section.classList.add('animated'); // Optional: Add a class to prevent repeated animations
-            }
-        });
-    }
-
-    // Add a scroll event listener to trigger the animation
-    window.addEventListener('scroll', handleScroll);
-</script>
