--- a/index.html
+++ b/index.html
@@ -37,11 +37,9 @@
         <section id="portfolio">
             <h2 class="portfolio-title">Portfolio</h2>
             <div class="project-grid">
-                <div class="project">
-                    <a href="https://play.google.com/store/apps/details?id=com.eastsidegames.theofficeswm&hl=en_US&gl=US">
-                        <img src="images/TheOfficeBanner.png" alt="The Office: Somehow We">
+                <div class="project" href="https://play.google.com/store/apps/details?id=com.eastsidegames.theofficeswm&hl=en_US&gl=US">
+                        <img src="images/TheOfficeBanner.png" alt="The Office: Somehow We"></a>
                         <h3>The Office: Somehow We</h3>
-                    </a>
                     <p>Play through hilarious moments from the critically-acclaimed Emmy® award-winning comedy</p>
                 </div>
                 <div class="project">
