--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <script src="FadeIn.js"></script>
     <title>Shea McAuley - Portfolio</title>
 </head>
 <body>
@@ -41,21 +42,21 @@
         </section>
 
         <section id="portfolio">
-            <h2 class="portfolio-title">Portfolio</h2>
+            <h2 class="portfolio-title">Personal projects</h2>
             <div class="project-grid">
-                <div class="project" href="https://play.google.com/store/apps/details?id=com.eastsidegames.theofficeswm&hl=en_US&gl=US">
+                <div class="project fade-in" href="https://play.google.com/store/apps/details?id=com.eastsidegames.theofficeswm&hl=en_US&gl=US">
                         <img src="images/TheOfficeBanner.png" alt="The Office: Somehow We"></a>
                         <h3>The Office: Somehow We</h3>
                     <p>Play through hilarious moments from the critically-acclaimed Emmy® award-winning comedy</p>
                 </div>
-                <div class="project">
+                <div class="project fade-in">
                     <a href="https://cafe-interstellar.itch.io/cosmechanics">
                         <img src="images/CosmechanicsBanner.png" alt="Cosmechanics">
                         <h3>Cosmechanics</h3>
                     </a>
                     <p>A frantic, local multiplayer game in which 1 - 4 players must work together to repair and maintain spaceships by rapidly completing increasingly urgent tasks.</p>
                 </div>
-                <div class="project">
+                <div class="project fade-in">
                     <a href="https://elephant-tub-games.itch.io/thumb-maze">
                         <img src="images/ThumbThumbBanner.png" alt="Thumb Maze">
                         <h3>Thumb Maze</h3>
