Resized banner images and change descriptions to roles

--- a/index.html
+++ b/index.html
@@ -47,21 +47,24 @@
                 <div class="project fade-in" href="https://play.google.com/store/apps/details?id=com.eastsidegames.theofficeswm&hl=en_US&gl=US">
                         <img src="images/TheOfficeBanner.png" alt="The Office: Somehow We"></a>
                         <h3>The Office: Somehow We</h3>
-                    <p>Play through hilarious moments from the critically-acclaimed Emmy® award-winning comedy</p>
+                    <p>Software Engineer II | Lead Engineer</p>
+                    <p>Made in Unity</p>
                 </div>
                 <div class="project fade-in">
                     <a href="https://cafe-interstellar.itch.io/cosmechanics">
                         <img src="images/CosmechanicsBanner.png" alt="Cosmechanics">
                         <h3>Cosmechanics</h3>
                     </a>
-                    <p>A frantic, local multiplayer game in which 1 - 4 players must work together to repair and maintain spaceships by rapidly completing increasingly urgent tasks.</p>
+                    <p>Lead Developer</p>
+                    <p>Made in Unity</p>
                 </div>
                 <div class="project fade-in">
                     <a href="https://elephant-tub-games.itch.io/thumb-maze">
                         <img src="images/ThumbThumbBanner.png" alt="Thumb Maze">
                         <h3>Thumb Maze</h3>
                     </a>
-                    <p>Have you ever wanted to be chased by a giant man made of thumbs?</p>
+                    <p>Lead Developer</p>
+                    <p>Made in Unity</p>
                 </div>
             </div>
         </section>
