Fixed border issue with cosmechanics banner

--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@
         <section id="portfolio">
             <h2 class="portfolio-title">Personal projects</h2>
             <div class="project-grid">
-                <div class="project fade-in" href="https://play.google.com/store/apps/details?id=com.eastsidegames.theofficeswm&hl=en_US&gl=US">
-                        <img src="images/TheOfficeBanner.png" alt="The Office: Somehow We"></a>
-                        <h3>The Office: Somehow We</h3>
+                <div class="project fade-in">
+                    <a href="https://play.google.com/store/apps/details?id=com.eastsidegames.theofficeswm&hl=en_US&gl=US">
+                        <img src="images/TheOfficeBanner.png" alt="Cosmechanics">
+                        <h3>Cosmechanics</h3>
+                    </a>
                     <p>Software Engineer II | Lead Engineer</p>
                     <p>Made in Unity</p>
                 </div>
@@ -71,8 +73,8 @@
 
         <section id="contact">
             <h2>Contact</h2>
-            <p>Shea McAuley</p>
-            <p><i class="fas fa-envelope"></i> <a href="mailto:Shea.McAuley995@gmail.com">Email: Shea.McAuley995@gmail.com</a></p>
+            <p></p>
+            <p><a href="mailto:Shea.McAuley995@gmail.com"> <i class="fas fa-envelope"></a></i> Shea.McAuley995@gmail.com</p>
             <social-icons>
                 <a href="https://github.com/SheaMcAuley995" target="_blank"><i class="fab fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/sheamcauley/" target="_blank"><i class="fab fa-linkedin"></i></a>
