Added footer as contact information

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </div>
         </section>
 
-        <section id="contact">
+        <footer class="contact-info">  
             <h2>Contact</h2>
             <p>Feel free to reach out via</p>
             <element class="social-icons">
@@ -87,6 +87,7 @@
                 <a href="https://github.com/SheaMcAuley995" target="_blank"><i class="fab fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/sheamcauley/" target="_blank"><i class="fab fa-linkedin"></i></a>
             </element>
-        </section>
+        </footer>
     </div>
+   
 </html>
